--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <!-- Razorpay JavaScript SDK -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-    <title>JNJ-TUBE</title>
+    <title>JJ-TUBE</title>
   </head>
   <body>
     <div id="root"></div>
